--- a/profile.html
+++ b/profile.html
@@ -50,18 +50,18 @@ body {
 
 /* Header */
 .header {
-    background: white;
+    background: offwhite;
     box-shadow: var(--shadow-sm);
     position: sticky;
     top: 0;
     z-index: 1000;
-    padding: 1.5rem 0;
+    padding: 0.5rem 0;
 }
 
 .header .container {
     max-width: 1400px;
     margin: 0 auto;
-    padding: 0 2rem;
+    padding: 0 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -128,7 +128,7 @@ body {
     display: flex;
     align-items: center;
     gap: 0.6rem;
-    padding: 0.8rem 1.8rem;
+    padding: 0.5rem 1.5rem;
     background: transparent;
     border: 2px solid var(--light-gray);
     border-radius: 8px;
@@ -173,22 +173,22 @@ body {
 
 /* Main Content */
 .main-content {
-    padding: 3rem 0;
+    padding: 0.5rem 0;
 }
 
 .container {
     max-width: 1400px;
     margin: 0 auto;
-    padding: 0 2rem;
+    padding: 0 0.5rem;
 }
 
 /* Profile Header */
 .profile-header {
-    background: white;
+    background: offwhite;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: var(--shadow-md);
-    margin-bottom: 3rem;
+    margin-bottom: 0.5rem;
     animation: slideUp 0.6s ease-out;
 }
 
@@ -221,10 +221,10 @@ body {
 }
 
 .profile-info {
-    padding: 0 3rem 3rem 3rem;
+    padding: 0 1rem 1rem 1rem;
     display: flex;
     align-items: flex-start;
-    gap: 2.5rem;
+    gap: 0.5rem;
     position: relative;
 }
 
@@ -284,7 +284,7 @@ body {
 
 .user-details {
     flex: 1;
-    padding-top: 2rem;
+    padding-top: 0.5rem;
 }
 
 /* UPDATED: User name font to Poppins for consistency with logo */
@@ -300,7 +300,7 @@ body {
 .user-email {
     color: var(--medium-gray);
     font-size: 1.1rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .user-stats {
@@ -330,7 +330,7 @@ body {
 .stat-label {
     display: block;
     font-size: 0.9rem;
-    color: var(--medium-gray);
+    color: var(--off-white);
 }
 
 .edit-profile-btn {
@@ -347,7 +347,6 @@ body {
     align-items: center;
     gap: 0.8rem;
     transition: all 0.3s ease;
-    box-shadow: var(--shadow-sm);
 }
 
 .edit-profile-btn:hover {
@@ -360,11 +359,11 @@ body {
 .content-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-    gap: 2rem;
+    gap: 1rem;
 }
 
 .card {
-    background: white;
+    background: offwhite;
     border-radius: 16px;
     box-shadow: var(--shadow-sm);
     overflow: hidden;
@@ -393,7 +392,7 @@ body {
 }
 
 .card-header {
-    padding: 2rem 2.5rem;
+    padding: 1rem 0.5rem;
     border-bottom: 1px solid var(--light-gray);
     display: flex;
     align-items: center;
@@ -408,7 +407,7 @@ body {
     color: var(--dark-purple);
     display: flex;
     align-items: center;
-    gap: 1rem;
+    gap: 0rem;
     letter-spacing: 0px;
 }
 
@@ -430,7 +429,7 @@ body {
 }
 
 .card-body {
-    padding: 2.5rem;
+    padding: 0.5rem;
 }
 
 /* Info Rows */
@@ -438,7 +437,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.2rem 0;
+    padding: 0.2rem 0;
     border-bottom: 1px solid var(--light-gray);
 }
 
@@ -489,7 +488,7 @@ body {
 .form-group input,
 .form-group textarea {
     width: 100%;
-    padding: 1rem 1.2rem;
+    padding: 0.5rem 0.8rem;
     border: 2px solid var(--light-gray);
     border-radius: 10px;
     font-size: 1rem;
