--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/slider-1.jpeg" class="d-block w-100" alt="Pizza">
+                    <img src="images/slider-1.jpg" class="d-block w-100" alt="Pizza">
                     <div class="carousel-caption d-none d-md-block">
                         <h3>The <span class="text-warning">tastiest</span> pizza on the planet</h3>
                         <a href="menu.html" class="btn btn-danger">Order Now</a>
