--- a/IT0051-MIDTERMS-dontv2/home.html
+++ b/IT0051-MIDTERMS-dontv2/home.html
@@ -268,6 +268,7 @@
 <button id="cartBtn" class="cart-btn">🛒 Shopping (<span id="cartCount">0</span>)</button>
 
 <style>
+
 .cart-btn {
     position: fixed;
     bottom: 20px;
@@ -347,10 +348,14 @@
     font-weight: bold;
     color: #28a745;
 }
-</style>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="script.js"></script>
-<script src="cart.js"></script>
-</body>
+    /* 🔧 Ruined spacing for paragraphs inside .box-container (intentionally broken) */
+    .box-container .box p {
+        margin: -18px 0 -10px 0; /* pull paragraphs up and overlap */
+        padding: 0;
+        line-height: 0.6; /* compress line height */
+        letter-spacing: 6px; /* spread letters out */
+        word-spacing: 30px; /* break word spacing */
+        transform: translateY(-10px);
+    }
 </html>
