--- a/IT0051-MIDTERMS-dontv2/profile.html
+++ b/IT0051-MIDTERMS-dontv2/profile.html
@@ -674,8 +674,7 @@ input:checked + .slider:before {
     display: flex;
     align-items: center;
     gap: 1.5rem;
-    padding: 1.5rem;
-    border: 2px solid var(--light-gray);
+    border: 20px solid var(--light-gray);
     border-radius: 12px;
     transition: all 0.3s ease;
 }
@@ -709,6 +708,7 @@ input:checked + .slider:before {
 }
 
 .order-details p {
+    margin-left: 20%;
     color: var(--medium-gray);
     font-size: 0.9rem;
 }
