THIS IS THE UPDATED DON'TS -- as of FEB 4 6:43 AM

--- a/IT0051-MIDTERMS-dont-s/menu.html
+++ b/IT0051-MIDTERMS-dont-s/menu.html
@@ -100,7 +100,7 @@
             </div>
 
             <div class="box">
-                <img src="images/pizza-4.png" alt="">
+                <img src="images/pizza-1.png" alt="">
                 <h3>Pepperoni Pizza</h3>
                 <p>Classic pepperoni with cheese and tomato sauce</p>
                 <div class="stars">
@@ -115,7 +115,7 @@
             </div>
 
             <div class="box">
-                <img src="images/pizza-5.png" alt="">
+                <img src="images/pizza-2.png" alt="">
                 <h3>BBQ Chicken Pizza</h3>
                 <p>BBQ sauce, grilled chicken, onions, cilantro</p>
                 <div class="stars">
@@ -130,7 +130,7 @@
             </div>
 
             <div class="box">
-                <img src="images/pizza-6.png" alt="">
+                <img src="images/pizza-3.png" alt="">
                 <h3>Four Cheese Pizza</h3>
                 <p>Mozzarella, cheddar, parmesan, gorgonzola</p>
                 <div class="stars">
@@ -145,7 +145,7 @@
             </div>
 
             <div class="box">
-                <img src="images/pizza-7.png" alt="">
+                <img src="images/pizza-1.png" alt="">
                 <h3>My Mac</h3>
                 <p>A perfect blend of cheesy macaroni, swirl of jalapenos dip</p>
                 <div class="stars">
@@ -160,7 +160,7 @@
             </div>
 
             <div class="box">
-                <img src="images/pizza-8.png" alt="">
+                <img src="images/pizza-2.png" alt="">
                 <h3>Veg Hawaiian Pizza</h3>
                 <p>Pineapple, paneer and sweet corn with extra cheese</p>
                 <div class="stars">
@@ -175,7 +175,7 @@
             </div>
 
             <div class="box">
-                <img src="images/pizza-9.png" alt="">
+                <img src="images/pizza-3.png" alt="">
                 <h3>Farm Villa Pizza</h3>
                 <p>Capsicum, tomatoes, paneer and red paprika topped with korma dip</p>
                 <div class="stars">
@@ -197,7 +197,7 @@
 
         <div class="box-container">
             <div class="box">
-                <img src="images/pasta-1.png" alt="">
+                <img src="images/pizza-1.png" alt="">
                 <h3>Mexican Pasta</h3>
                 <p>Exotic red sauce with onion, capsicum, mushroom, olives and cheese</p>
                 <div class="stars">
@@ -212,7 +212,7 @@
             </div>
 
             <div class="box">
-                <img src="images/pasta-2.png" alt="">
+                <img src="images/pizza-2.png" alt="">
                 <h3>Alfredo Pasta</h3>
                 <p>Creamy white sauce pasta with parmesan cheese</p>
                 <div class="stars">
@@ -227,7 +227,7 @@
             </div>
 
             <div class="box">
-                <img src="images/pasta-3.png" alt="">
+                <img src="images/pizza-3.png" alt="">
                 <h3>Arrabiata Pasta</h3>
                 <p>Spicy tomato sauce with garlic and red chili flakes</p>
                 <div class="stars">
@@ -242,7 +242,7 @@
             </div>
 
             <div class="box">
-                <img src="images/pasta-4.png" alt="">
+                <img src="images/pizza-1.png" alt="">
                 <h3>Carbonara Pasta</h3>
                 <p>Classic Italian pasta with bacon, eggs, and pecorino cheese</p>
                 <div class="stars">
@@ -257,7 +257,7 @@
             </div>
 
             <div class="box">
-                <img src="images/pasta-5.png" alt="">
+                <img src="images/pizza-2.png" alt="">
                 <h3>Pesto Pasta</h3>
                 <p>Fresh basil pesto with pine nuts and parmesan</p>
                 <div class="stars">
@@ -272,7 +272,7 @@
             </div>
 
             <div class="box">
-                <img src="images/pasta-6.png" alt="">
+                <img src="images/pizza-3.png" alt="">
                 <h3>Bolognese Pasta</h3>
                 <p>Rich meat sauce with tomatoes and herbs</p>
                 <div class="stars">
@@ -294,7 +294,7 @@
 
         <div class="box-container">
             <div class="box">
-                <img src="images/dessert-1.png" alt="">
+                <img src="images/pizza-1.png" alt="">
                 <h3>Choco Lava Cake</h3>
                 <p>Small muffin infused with warm chocolate! Vintage dessert</p>
                 <div class="stars">
@@ -309,7 +309,7 @@
             </div>
 
             <div class="box">
-                <img src="images/dessert-2.png" alt="">
+                <img src="images/pizza-2.png" alt="">
                 <h3>Tiramisu</h3>
                 <p>Classic Italian coffee-flavored dessert</p>
                 <div class="stars">
@@ -324,7 +324,7 @@
             </div>
 
             <div class="box">
-                <img src="images/dessert-3.png" alt="">
+                <img src="images/pizza-3.png" alt="">
                 <h3>Brownie Sundae</h3>
                 <p>Warm brownie with vanilla ice cream and chocolate sauce</p>
                 <div class="stars">
@@ -339,7 +339,7 @@
             </div>
 
             <div class="box">
-                <img src="images/dessert-4.png" alt="">
+                <img src="images/pizza-1.png" alt="">
                 <h3>Cheesecake</h3>
                 <p>Creamy New York style cheesecake with berry topping</p>
                 <div class="stars">
@@ -354,7 +354,7 @@
             </div>
 
             <div class="box">
-                <img src="images/dessert-5.png" alt="">
+                <img src="images/pizza-2.png" alt="">
                 <h3>Panna Cotta</h3>
                 <p>Italian vanilla custard with caramel sauce</p>
                 <div class="stars">
@@ -369,7 +369,7 @@
             </div>
 
             <div class="box">
-                <img src="images/dessert-6.png" alt="">
+                <img src="images/pizza-3.png" alt="">
                 <h3>Gelato</h3>
                 <p>Italian ice cream in vanilla, chocolate, and strawberry</p>
                 <div class="stars">
@@ -391,7 +391,7 @@
 
         <div class="box-container">
             <div class="box">
-                <img src="images/wines-1.png" alt="">
+                <img src="images/pizza-1.png" alt="">
                 <h3>Chianti Classico Riserva</h3>
                 <p>A robust Tuscan red with a bouquet of dark cherries and spices</p>
                 <div class="stars">
@@ -406,7 +406,7 @@
             </div>
 
             <div class="box">
-                <img src="images/wines-2.png" alt="">
+                <img src="images/pizza-2.png" alt="">
                 <h3>Pinot Grigio</h3>
                 <p>Crisp Italian white wine with citrus notes</p>
                 <div class="stars">
@@ -421,7 +421,7 @@
             </div>
 
             <div class="box">
-                <img src="images/wines-3.png" alt="">
+                <img src="images/pizza-3.png" alt="">
                 <h3>Prosecco</h3>
                 <p>Sparkling Italian wine perfect for celebrations</p>
                 <div class="stars">
@@ -436,7 +436,7 @@
             </div>
 
             <div class="box">
-                <img src="images/wines-4.png" alt="">
+                <img src="images/pizza-1.png" alt="">
                 <h3>Merlot</h3>
                 <p>Smooth red wine with plum and chocolate notes</p>
                 <div class="stars">
@@ -451,7 +451,7 @@
             </div>
 
             <div class="box">
-                <img src="images/wines-5.png" alt="">
+                <img src="images/pizza-2.png" alt="">
                 <h3>Sauvignon Blanc</h3>
                 <p>Fresh white wine with tropical fruit flavors</p>
                 <div class="stars">
@@ -466,7 +466,7 @@
             </div>
 
             <div class="box">
-                <img src="images/wines-6.png" alt="">
+                <img src="images/pizza-3.png" alt="">
                 <h3>Cabernet Sauvignon</h3>
                 <p>Full-bodied red with blackcurrant and oak notes</p>
                 <div class="stars">
@@ -517,7 +517,7 @@
             <h2>Your Cart</h2>
             <div class="cart-items"></div>
             <h3 class="total"></h3>
-            <button class="btn btn-success checkout-btn">Checkout</button>
+            <button class="btn btn-success checkout-btn">Submit</button>
         </div>
     </div>
 
@@ -597,6 +597,12 @@
             padding: 15px;
             font-size: 18px;
             margin-top: 15px;
+            transition: background-color 0.2s ease;
+        }
+        .checkout-btn:hover {
+            background-color: red;
+            border-color: red;
+            color: white;
         }
         .total {
             text-align: right;
